--- a/src/components/ui/Button/Button.module.css
+++ b/src/components/ui/Button/Button.module.css
@@ -1,6 +1,6 @@
 .Button {
 
-    background-color: red;
-    border-radius: 10%;   
+    background-color: Aquamarine;
+    border-radius: 5px;   
 
 }
