--- a/src/components/ui/Button/Button.module.css
+++ b/src/components/ui/Button/Button.module.css
@@ -4,3 +4,13 @@
     border-radius: 5px;   
 
 }
+
+.Button:hover{
+
+    box-shadow: 15px 15px 20px gray;
+}
+
+.clicked{
+    box-shadow: 5px 5px 20px rgb(192, 192, 192) !important;
+    border: 1px solid grey;
+}
