--- a/src/components/ui/Button/Button.module.css
+++ b/src/components/ui/Button/Button.module.css
@@ -12,5 +12,5 @@
 
 .clicked{
     box-shadow: 5px 5px 20px rgb(192, 192, 192) !important;
-    border: 1px solid grey;
+    border: 1px solid red;
 }
