--- a/src/App/components/layout/FlexW1Grow/FlexW1Grow.module.css
+++ b/src/App/components/layout/FlexW1Grow/FlexW1Grow.module.css
@@ -1,3 +1,10 @@
 .FlexW1Grow {
+    display: flex;
+    width: 100%;
+    height: 100%;
+    
+}
 
+.FlexW1Grow>*:nth-child(1){
+    flex-grow: 1;
 }
